Improved the speed, better unzipping, fixed the profile creator